fixed jumping navbar padding || added socials to side flex box

--- a/newstyles.css
+++ b/newstyles.css
@@ -62,11 +62,8 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: black 5px outset;
-}
-
-.navbarOffsetMargin {
-	margin-top: 88px;
+	border: white 3px solid;
+	/* border-bottom: black 5px outset; */
 }
 
 #navbar.sticky {
@@ -258,7 +255,7 @@ section > h2 {
 	padding: 20px;
 	background-color: var(--color3);
 	position: relative;
-	height: 10;
+	border: white 4px solid;
 }
 
 .side .main {
@@ -267,6 +264,27 @@ section > h2 {
 .side h2 {
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+
+#social {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	display: inline-flex;
+	border: #aaa 3px solid;
+	border-radius: 15px;
+	padding: 3px;
+	padding-top: 13px;
+	justify-content: center;
+}
+
+#social a {
+	margin: 10px;
+}
+
+#social a img {
+	width: 50px;
+	height: 50px;
 }
 
 /* Fake image */
